# study_rust

./: README.md  模式匹配.md  流程控制.md
aircraft/: Cargo.toml
beginner/ch01-LifeTime/: Cargo.toml  README.md
beginner/ch02-closure/: Cargo.toml
beginner/ch03-As/: Cargo.toml
beginner/ch04-box/: Cargo.toml  (+1 more)
ch03-ownership/: README.md
ch04-compound/: Cargo.toml
ch09-SetType/: Cargo.toml  README.md
ch10-LifeTime/: Cargo.toml
ch11-exception/: Cargo.toml  README.md
ch14-format/: Cargo.toml
effective/: Reg Files.md  item10 - Consider using iterator transforms instead of explicit loops.md  item12 - Prefer generics to trait objects.md  item14 - Understand lifetimes.md  item15 - Understand the borrow checker.md  item22 - Minimize visibility.md  item4 - perfer idiomatic error variants.md  item5 - familiarize yourself with standard traits.md  item6 - Understand type conversions.md  item8 - Use builders for complex types.md  item9 - Familiarize yourself with reference and pointer types.md  special trait bound.md
fuckqueue/: Cargo.toml  README.md  hello.c
interpreter/: Cargo.toml  README.md
interpreter/src/: builtins.rs  bytecode.rs  bytecode_interpreter.rs  bytecode_tests.rs  expr.rs  gc.rs  main.rs  parser.rs  scanner.rs  treewalk_interpreter.rs  treewalk_tests.rs  value.rs
learnMacro/: Cargo.toml  README.md  expand.rs
linkedlist/: README.md
lists/: README.md
minigrep/: README.md
noob/ch12-Crate/hello-packagel/: Cargo.toml
noob/ch12-Crate/hello-packagel/src/: lib.rs  main.rs
rustlings/: quiz3.rs
strtok/: Cargo.toml  README.md
winnow/: Cargo.toml
(+226 files in other folders)
