[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.0"
clap = "2.33"  # 可以解析命令函参数
serde = { version = "1.0", features = ["derive"] }  # 是一个 序列化和反序列化的框架
ctrlc = "3.1.7"  # 用来处理终端的 ctrl-c 信号
rustyline = "8.0.0"  # 支持 用于在终端的自动补全等功能
colored = "2"  # 用于在终端中输出颜色


